--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
 		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"db:push": "drizzle-kit push",
+		"db:studio": "npx drizzle-kit studio"
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^5.2.3",
+		"@neondatabase/serverless": "^0.9.4",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@reach/visually-hidden": "^0.18.0",
 		"babel-plugin-react-compiler": "0.0.0-experimental-938cd9a-20240601",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"drizzle-orm": "^0.32.0",
 		"framer-motion": "^11.3.6",
 		"lucide-react": "^0.408.0",
 		"next": "15.0.0-rc.0",
@@ -28,6 +32,7 @@
 		"@types/node": "^20.14.10",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"drizzle-kit": "^0.23.0",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "15.0.0-rc.0",
 		"postcss": "^8.4.39",
